kustomize/deployment-2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ttt-2
  namespace: default
  labels:
    app: ttt-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttt-2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ttt-2
    spec:
      containers:
        - name: ttt-2
          image: 'failwin/ttt:0.3.0'
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
