kustomize/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttt-2
  labels:
    app: ttt-2
spec:
  type: NodePort
  ports:
    - port: 3031
      nodePort: 30031
      protocol: TCP
      name: http
  selector:
    app: ttt-2
