kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttt
  labels:
    app: ttt
spec:
  type: NodePort
  ports:
    - port: 3030
      nodePort: 30030
      protocol: TCP
      name: http
  selector:
    app: ttt
