kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-3
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mm.my-works.in.ua
    secretName: secret-ssl-3
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ttt
            port:
              name: http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ttt-2
            port:
              name: http
